force-app/main/default/objects/Event_Level__c/Event_Level__c.object-meta.xml
<CustomObject>
    <description>This object is created to migrate all the Legacy Records from LCRM.</description>
    <label>Event Level</label>
    <nameField>
        <label>Event Level  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Event Levels</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>