force-app/main/default/objects/Event_Level__c/fields/Benefits__c.field-meta.xml
<CustomField>
    <fullName>Benefits__c</fullName>
    <description>Created as a part of Heller Data Migration 2021.</description>
    <label>Benefits</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Admission</fullName>
            </value>
            <value>
                <fullName>Dinner for One</fullName>
            </value>
            <value>
                <fullName>Private Table</fullName>
            </value>
            <value>
                <fullName>Greens Fees</fullName>
            </value>
            <value>
                <fullName>T-Shirt</fullName>
            </value>
            <value>
                <fullName>Lunch for One</fullName>
            </value>
            <value>
                <fullName>Lunch for Team</fullName>
            </value>
            <value>
                <fullName>Annual Membership</fullName>
            </value>
            <value>
                <fullName>Pre-Event Gathering</fullName>
            </value>
            <value>
                <fullName>Ticket</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>