force-app/main/default/objects/Event_Level__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Created as a part of Heller Data Migration 2021.</description>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>