force-app/main/default/objects/Event_Level__c/fields/Tax_Deductible_Amount__c.field-meta.xml
<CustomField>
    <fullName>Tax_Deductible_Amount__c</fullName>
    <description>Created as a part of Heller Data Migration 2021.</description>
    <label>Tax Deductible Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>