force-app/main/default/objects/Event_Level__c/recordTypes/Attendee_Level.recordType-meta.xml
<RecordType>
    <fullName>Attendee_Level</fullName>
    <active>true</active>
    <description>Costs and benefits of event attendance for an individual constituent</description>
    <label>Attendee Level</label>
</RecordType>