force-app/main/default/objects/Event_Level__c/recordTypes/EDF_Event_Attendee.recordType-meta.xml
<RecordType>
    <fullName>EDF_Event_Attendee</fullName>
    <active>true</active>
    <description>Default EDF event level</description>
    <label>EDF Event Attendee</label>
</RecordType>